<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp">

    <EditText
        android:id="@+id/edt_addItems"
        android:layout_width="match_parent"
        android:hint="Add Item"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@+id/btn_add_item"/>

    <Button
        android:id="@+id/btn_add_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Add Item"
        android:layout_alignParentRight="true"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recylerview_item"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/edt_addItems"></android.support.v7.widget.RecyclerView>

</RelativeLayout>
