<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:weightSum="1"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_items"
        android:layout_width="0dp"
        android:layout_weight=".80"
        android:layout_height="wrap_content" />

    <ImageButton
        android:id="@+id/imbtn_edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight=".10"
        android:src="@drawable/ic_edit_black"/>

    <ImageButton
        android:id="@+id/imbtn_delete"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight=".10"
        android:src="@drawable/ic_delete_black"/>
</LinearLayout>